# small_programs_2019

./: README.md
ScriptingTest/: README.md  ScriptingTest.sln
ScriptingTest/ScriptingTest/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScriptingTest.csproj  Settings.cs
ScriptingTest/ScriptingTest/Properties/: AssemblyInfo.cs  (+2 more)
UlamSpiral/: README.md  UlamSpiral.sln
UlamSpiral/UlamSpiral/: Resource.h  UlamSpiral.cpp  UlamSpiral.rc  UlamSpiral.vcxproj  UlamSpiral.vcxproj.filters  resource.h  spiral.cpp  spiral.h
calibron-12/: README.md  knapsack.sln
calibron-12/knapsack/: knapsack.cpp  knapsack.vcxproj  knapsack.vcxproj.filters
djvu-metadata/: README.md  gen-djvu-dsed.p6  gen-djvu-dsed.ps1  gen-dsed.pl  gen-dsed.py  splitpdf.p6  splitpdf.pl  splitpdf.ps1
djvu-metadata/cs-gen-dsed/: GenDSed.sln  Program.cs  deploy.ps1  gen-dsed.csproj
djvu-metadata/gen-dsed/: README.md  deploy.bat  deploy.ps1  project.clj
djvu-metadata/haskell-dsed/: README.md  gen-dsed.cabal  stack.yaml
djvu-metadata/haskell-dsed/src/: Main.hs
djvu-metadata/java-gen-dsed/: deploy.ps1  pom.xml
djvu-metadata/old/: README.md  genmarks.pl  genpagetitle.pl
ge-walks/: README.md  ge-walks.lisp
music-conversions/: flac-to-ogg.ps1
postcard-pathtrace/: README.md
postcard-pathtrace/clojure-version/: project.clj
postcard-pathtrace/scala-version/: build.sbt  postcard.scala
script-vba/: README.md  word_vba_code.bas
surreal/: README.md  surreal.lisp
swing-experiments/drop-shadow/: README.md  shadow.java
swing-experiments/price-ladder/: cmd.java  readme.md
(+5 files in other folders)
