name:                gen-dsed 
version:             1.0.0.0
synopsis:            build djvused input files from a custom language
-- description:
homepage:            https://github.com/rwtodd/hs-fun#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Todd
maintainer:          richard.w.todd@outlook.com
copyright:           2019 Richard Todd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gen-dsed
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       parsec, base >= 4.7 && < 5
